test/tests/compiler/5_local_variables/valid/assign_val_in_initializer.plx
pub fn main(none) i32 {
    a: i32 = a = 5
    return a
}
