test/tests/compiler/5_local_variables/invalid_parse/plx1_missing_type_assign_1.plx
pub fn main(none) i32 {
    a i32 = false
}
